# esp32-s3-synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench_polyphony.py  sdkconfig.defaults
main/: CMakeLists.txt  clock.cpp  idf_component.yml  main.cpp  tusb_config.h
synth/: .voice.h-pre1  .voice.h-pre2  .voice.h-pre3  .voice.h-pre4  README.md  adsr.h  adsr_rt.h  constants.h  linked_list.h  oscillator.cpp  oscillator.h  synth.h  utils.h  voice.h
